# Rapport

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  seed_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.tsx  Avatar.tsx  Button.tsx  CitationChip.tsx  FindingItem.tsx  InterpretationCard.tsx  LanguageSwitcher.tsx  NavIcons.tsx  PageHeader.tsx  PlayLine.tsx  RecordingStatus.tsx  SpeakerStripe.tsx  WaveformMark.tsx  WaveformPlayer.tsx  states.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: format.ts  personColor.ts  useAsync.ts
frontend/src/pages/: ConversationPage.tsx  GraphPage.tsx  NotFoundPage.tsx  PeoplePage.tsx  PersonPage.tsx  SettingsPage.tsx  StyleguidePage.tsx  TodayPage.tsx
frontend/src/pages/graph/: groups.ts  (+4 more)
frontend/src/styles/: tokens.css
packaging/: installer.nsi  launch.py  rapport.spec
src/rapport/: __init__.py  __main__.py  _frozen.py  config.py  ingest.py
src/rapport/alwayson/: __init__.py  daywav.py  engine.py  mic.py  segmenter.py  status.py
src/rapport/analysis/: __init__.py  analyze.py
src/rapport/audio/: __init__.py  recorder.py
src/rapport/desktop/: __init__.py  controller.py  runtime.py  tray.py
src/rapport/diarize/: __init__.py  align.py  base.py  pyannote_diarizer.py  single_speaker.py
src/rapport/mcp/: __init__.py  server.py  tools.py
src/rapport/storage/: __init__.py  db.py  schema.sql
src/rapport/transcribe/: __init__.py  base.py  local_whisper.py  text.py
src/rapport/ui/: __init__.py  app.py
src/rapport/web/: __init__.py  app.py
tests/: test_alwayson_daywav.py  test_alwayson_db.py  test_alwayson_engine.py  test_alwayson_mic.py  test_alwayson_segmenter.py  test_alwayson_smoke.py  test_alwayson_status.py  test_alwayson_wal.py  test_analysis.py  test_config.py  test_db.py  test_desktop.py  test_diarize.py  test_frozen_paths.py  test_ingest.py  test_mcp.py  test_text.py  test_transcriber_contract.py  test_web.py  test_web_graph.py
(+33 files in other folders)
