[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapport"
version = "0.0.1"
description = "开源、本地优先、以人为中心的人际对话助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "soundfile",
    "gradio",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
# 语言模型后端（运行可选）：配 RAPPORT_LLM_PROVIDER=anthropic 时才需要。
# 测试只用内置 fake provider，不 import anthropic。
anthropic = ["anthropic"]

[project.scripts]
rapport = "rapport.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rapport"]
